--- a/sgim/templates/incidencias/incidencias.html
+++ b/sgim/templates/incidencias/incidencias.html
@@ -246,12 +246,14 @@ $(document).ready(function() {
                     // appends buttons to the status bar.
                     var container = $("<div style='margin:5px;'></div>");
                     var viewButton = $("<div class='ui  tiny blue button'> Ver detalles</div>");
+                    var viewPDFButton = $("<div class='ui  tiny blue button'> Detalles PDF</div>");
                     var filterButton = $("<div class='ui  tiny purple button'>Filtrar Fechas</div>");
                     var reloadbtn = $("<div class='tiny green ui icon button'><i class='icon refresh'></i></div>");
                     var cerrarBtn = $("<div class='tiny orange ui icon button disabled cerrar'><i class='icon ion-flash-off'></i>Cerrar Incidente</div>");
-
+                    
                     container.append(reloadbtn);
                     container.append(viewButton);
+                    container.append(viewPDFButton);
                     container.append(filterButton);
                     container.append(cerrarBtn);
                     statusbar.append(container);
@@ -267,8 +269,19 @@ $(document).ready(function() {
                       var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
                       var id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
                       if(id!=null){
-                      	var win = window.open('/incidencias/incidentes/reporte/detalle/'+id, '_blank');
+                      	var win = window.open('/incidencias/incidente/detalle/'+id, '_blank');
                       		win.focus(); 
+                      }else{
+                        $.snackbar({content: "<i class='ion-happy yellow icon'></i> Seleccione una fila por favor! ",timeout: 4000});
+                      }
+                       
+                    });
+                    viewPDFButton.click(function (event) {
+                      var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
+                      var id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
+                      if(id!=null){
+                        var win = window.open('/incidencias/incidentes/reporte/detalle/'+id, '_blank');
+                          win.focus(); 
                       }else{
                         $.snackbar({content: "<i class='ion-happy yellow icon'></i> Seleccione una fila por favor! ",timeout: 4000});
                       }
