--- a/sgim/templates/mantto/planes.html
+++ b/sgim/templates/mantto/planes.html
@@ -202,9 +202,9 @@ $('#Menu').removeClass('hidden')
                     // appends buttons to the status bar.
                     var container = $("<div style='margin:5px;'></div>");
                     var viewButton = $("<div class='ui  tiny teal button'> Detalles PDF</div>");
-                    var listButton = $("<div class='ui tiny blue button'>Listado PDF</div>");
-                    var initButton = $("<div class='ui tiny green disabled button iniciar'>Iniciar Mantto</div>");
-                    var finishButton = $("<div class='ui tiny orange disabled button terminar'>Finalizar mantto</div>");
+                  var listButton = $("<div class='ui tiny blue button'>Listado PDF</div>");
+                  var initButton = $("<div class='ui tiny green disabled button iniciar'>Iniciar Mantenimiento</div>");
+                  var finishButton = $("<div class='ui tiny orange disabled button terminar'>Finalizar Mantenimiento</div>");
 
                     container.append(viewButton);
                     container.append(listButton);
