--- a/sgim/templates/incidencias/nuevo_cambio.html
+++ b/sgim/templates/incidencias/nuevo_cambio.html
@@ -131,6 +131,7 @@ Nueva incidencia
                                     <div id='dispositivos' class="form-control"></div>
                                 </div>
                             </div>
+                            <!-- 
                             <div class="form-group">
                             	<label class="col-lg-3 control-label"> {{form.estado.label}}</label>
                                 <div class="col-lg-9 input-group">
@@ -141,7 +142,7 @@ Nueva incidencia
                                 </div>
                             </div>
 
-
+                            -->
 
                             <div class="form-group">
                                 <div class="col-lg-10 col-lg-offset-1">
@@ -325,7 +326,7 @@ function get_selected_items(id){
                 solicitante: $("#id_solicitante").val(),
                 responsable: $("#id_responsable").val(),
                 proposito: $("#id_proposito").val(),
-                estado:$("#id_estado").val(),
+                estado:1,
                 inicio_previsto: $("#inicio").val(),
 
             },
