--- a/sgim/templates/gestion/host_details.html
+++ b/sgim/templates/gestion/host_details.html
@@ -380,6 +380,7 @@
  							BootsFields = [
 			                    { name: 'id', type: 'int' },
 			                    { name: 'tipo', type: 'string' },
+			                    { name: 'host', type: 'string' },
 			                    { name: 'uptime', type: 'string' },
                                 { name: 'leido', type: 'string' },
 			                    { name: 'fecha',type: 'date'},
@@ -417,7 +418,7 @@
 			                    { name: 'mensaje', type: 'string' },
 			                    { name: 'fecha',type: 'date'},
 			                    { name: 'format_uptime',type: 'string'},	
-                                 { name: 'leido', type: 'string' },
+                                { name: 'leido', type: 'string' },
 			                ]
 		    columnasBoots = [
                   { text: 'ID', datafield: 'id', width:'60px', cellsrenderer: uptimeRender},
@@ -601,11 +602,13 @@
                           dataType: 'json',                          
             })
             .done(function(data) {
+            			if(data.length>0)
+            			{
                           	mem = data[0]
                           	total = mem.total_ram
                           	used = total - mem.free_ram
                           	// The speed gauge
-							    $('#container-ram').highcharts(Highcharts.merge(gaugeOptions, {
+							$('#container-ram').highcharts(Highcharts.merge(gaugeOptions, {
 							        yAxis: {
 							            min: 0,
 							            max: total,
@@ -629,7 +632,8 @@
 							            }
 							        }]
 
-							    }));                       
+							}));                       
+						}
 
             })
             .fail(function(err) {})
@@ -640,34 +644,37 @@
                           dataType: 'json',                          
                         })
                         .done(function(data) {
-                          	load = data[0]
-                          	procesadores = 2
-                          	if(load.procesors > 2)
-                          		procesadores =  parseInt(load.procesors)
-                          	perc = load.load5 / procesadores
-                          	// The RPM gauge
-						    $('#container-load').highcharts(Highcharts.merge(gaugeOptions, {
-						        yAxis: {
-						            min: 0,
-						            max: procesadores,
-						            title: {
-						                text: 'Carga promedio ultimos 5 min'
-						            }
-						        },
-						        series: [{
-						            name: 'carga',
-						            data: [load.load5],
-						            dataLabels: {
-						                format: '<div style="text-align:center"><span style="font-size:20px;color:' +
-						                    ((Highcharts.theme && Highcharts.theme.contrastTextColor) || '#616161') + '">{y:.1f}</span><br/>' +
-						                       '<span style="font-size:12px;color:silver">Procesos</span></div>'
-						            },
-						            tooltip: {
-						                valueSuffix: 'Carga'
-						            }
-						        }]
+                        	if(data.length>0)
+            				{
+	                          	load = data[0]
+	                          	procesadores = 2
+	                          	if(load.procesors > 2)
+	                          		procesadores =  parseInt(load.procesors)
+	                          	perc = load.load5 / procesadores
+	                          	// The RPM gauge
+							    $('#container-load').highcharts(Highcharts.merge(gaugeOptions, {
+							        yAxis: {
+							            min: 0,
+							            max: procesadores,
+							            title: {
+							                text: 'Carga promedio ultimos 5 min'
+							            }
+							        },
+							        series: [{
+							            name: 'carga',
+							            data: [load.load5],
+							            dataLabels: {
+							                format: '<div style="text-align:center"><span style="font-size:20px;color:' +
+							                    ((Highcharts.theme && Highcharts.theme.contrastTextColor) || '#616161') + '">{y:.1f}</span><br/>' +
+							                       '<span style="font-size:12px;color:silver">Procesos</span></div>'
+							            },
+							            tooltip: {
+							                valueSuffix: 'Carga'
+							            }
+							        }]
 
-						    }));
+							    }));
+							}
 
                         })
                         .fail(function(err) {
@@ -1041,6 +1048,59 @@ Highcharts.setOptions({
     })
 
 	
+
+
+  $('#jqxgridBoots').on('rowselect', function (event) 
+  {
+      var args = event.args;
+      var rowBoundIndex = args.rowindex;
+      var rowData = args.row;
+      console.log(rowData.leido)
+      if(!rowData.leido){
+      	mark_as_readed('/api/gestion/boot_events/'+rowData.id,'#jqxgridBoots', rowData.id)
+      	var notifications = parseInt($('.gestion_boot').html())
+      	$('.gestion_boot').html(notifications-1)
+      }
+  });
+   
+
+
+  $('#jqxgridGeneral').on('rowselect', function (event) 
+  {
+      var args = event.args;
+      var rowBoundIndex = args.rowindex;
+      var rowData = args.row;
+     console.log(rowData.leido)
+      if(!rowData.leido){
+      	mark_as_readed('/api/gestion/general_events/'+rowData.id,'#jqxgridGeneral', rowData.id)
+      	var notifications = parseInt($('.gestion_general').html())
+      	$('.gestion_general').html(notifications-1)
+      }
+  });
+    
+
+function mark_as_readed(url, grid_id, row_id){
+	$.ajax({
+		url: url,
+		type: 'PUT',
+		data: {
+			leido: true,
+			//host: host
+		},
+	})
+	.done(function(data) {
+		console.log("success");
+		$(grid_id).jqxGrid('updaterow', row_id, data);
+		var notifications = parseInt($('.gestion_menu').html())
+		$('.gestion_menu').html(notifications-1)
+	})
+	.fail(function(err) {
+		console.log(err);
+	})
+
+	
+}
+
 
 	
 });
