--- a/sgim/templates/gestion/evento_general.html
+++ b/sgim/templates/gestion/evento_general.html
@@ -89,6 +89,7 @@ $(document).ready(function() {
                     { name: 'warning', type: 'string' },
                     { name: 'mensaje', type: 'string' },
                     { name: 'fecha', type: 'date' },
+                    { name: 'leido', type: 'string' },
                 ],
                 id: 'id',
                 url: '/api/gestion/general_events/'
@@ -109,6 +110,18 @@ $(document).ready(function() {
           return "<div style='padding:5px; color:#1B5E20;font-weight:bold;text-align:center'><i class='green icon ion-checkmark-circled'></i>NO</div>";
         }
   }
+
+  function leidoRender(row, columnfield, value, defaulthtml, columnproperties){        
+        var data = $('#jqxgrid').jqxGrid('getrowdata', row); 
+        var element = $(defaulthtml); 
+        if(!data.leido){                
+                element.css('color', '#BF360C');    
+                element.css('font-weight', 'bold');
+        }
+         return element[0].outerHTML;
+  }
+
+
     
 
     $("#jqxgrid").jqxGrid({
@@ -123,16 +136,17 @@ $(document).ready(function() {
                 autoshowfiltericon: true,
                 localization: getLocalization(),
                 columns: [
-                  { text: 'Direccion', datafield: 'direccion', width:"15%" },
-                  { text: 'Tiempo Operacion', datafield: 'format_uptime',  width:"10%"},
-                  { text: 'Tabla', datafield: 'tabla', filtertype:'list' ,width:"110px"},
-                  { text: 'Item', datafield: 'item', filtertype:'list', width:"110px" },
+                  { text: 'Direccion', datafield: 'direccion', width:"15%",cellsrenderer: leidoRender,  },
+                  { text: 'Tiempo Operacion', datafield: 'format_uptime',  width:"10%",cellsrenderer: leidoRender, },
+                  { text: 'Tabla', datafield: 'tabla', filtertype:'list' ,width:"110px", cellsrenderer: leidoRender, },
+                  { text: 'Item', datafield: 'item', filtertype:'list', width:"110px",cellsrenderer: leidoRender,  },
                   { text: 'Alarma', datafield: 'warning', filtertype:'list', width:"10%",cellsrenderer: alarmRender,  },
-                  { text: 'Causa', datafield: 'mensaje', filtertype:'list', width:"20%" },
+                  { text: 'Causa', datafield: 'mensaje', filtertype:'list', width:"20%",cellsrenderer: leidoRender,  },
                   { text: 'Fecha', datafield: 'fecha', filtertype:'date', width:"16%",cellsformat:'dd-MM-yy H:mm', cellsrenderer: dateRender},
               ],
               
             });
+
 
 
   $('#jqxgrid').on('rowselect', function (event) 
@@ -140,8 +154,36 @@ $(document).ready(function() {
       var args = event.args;
       var rowBoundIndex = args.rowindex;
       var rowData = args.row;
-      console.log(rowData)
+      if(!rowData.leido){
+        mark_as_readed('/api/gestion/general_events/'+rowData.id,'#jqxgrid', rowData.id)
+        var notifications = parseInt($('.gestion_general').html())
+        $('.gestion_general').html(notifications-1)
+      }
   });
+    
+
+function mark_as_readed(url, grid_id, row_id){
+  $.ajax({
+    url: url,
+    type: 'PUT',
+    data: {
+      leido: true,
+      //host: host
+    },
+  })
+  .done(function(data) {
+    console.log("success");
+    $(grid_id).jqxGrid('updaterow', row_id, data);
+    var notifications = parseInt($('.gestion_menu').html())
+    $('.gestion_menu').html(notifications-1)
+  })
+  .fail(function(err) {
+    console.log(err);
+  })  
+}
+
+
+
     
 });
 
