--- a/sgim/templates/gestion/host_details.html
+++ b/sgim/templates/gestion/host_details.html
@@ -708,7 +708,6 @@
 		}
 	});
 
-		
 Highcharts.setOptions({
             global: {
                 useUTC: false
@@ -720,7 +719,8 @@ Highcharts.setOptions({
                 downloadJPEG: "Descargar como JPG",
                 printChart:"Imprimir Grafico",
                 weekdays: ["Domingo", "Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado"],
-                resetZoom:"Resetear zoom"
+                resetZoom:"Resetear zoom",
+                noData: "No hay datos que mostrar"
             }
         });
 
@@ -1096,9 +1096,7 @@ function mark_as_readed(url, grid_id, row_id){
 	})
 	.fail(function(err) {
 		console.log(err);
-	})
-
-	
+	})	
 }
 
 
