--- a/sgim/templates/incidencias/estadistica_anual.html
+++ b/sgim/templates/incidencias/estadistica_anual.html
@@ -37,7 +37,7 @@ Estadisticas mensuales
         				<h2 class="ui header blue">
 						  <i class="ion-stats-bars icon"></i>
 						  <div class="content">
-						    Estadisticas para incidentes resgistrados en el mes de {{today|date:"F Y"}}
+						    Estadisticas para incidentes resgistrados en {{today|date:"Y"}}
 						  </div>
 						</h2>
         			</div>
