--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -39,6 +39,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'incidentes_list' %}">Incidentes</a></li>
                         <li><a href="{% url 'cambios_list' %}">Cambios</a></li>
+                        <li><a href="{% url 'mensual_stats' %}">Estadisticas Incidentes</a></li>
                         <li class="divider"></li>
                         <li><a href="{% url 'cambios_follow' %}">Seguimiento de Cambio</a></li>
                         <li><a href="{% url 'incidentes_follow' %}">Seguimiento de Incidente</a></li>
